Refactor progress to Java 17