@@ -19,7 +19,6 @@ package org.apache.commons.math3.ml.clustering;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.commons.math3.exception.ConvergenceException;
@@ -216,28 +215,22 @@ public class KMeansPlusPlusClusterer<T extends Clusterable> extends Clusterer<T>
         final int max = (maxIterations < 0) ? Integer.MAX_VALUE : maxIterations;
         for (int count = 0; count < max; count++) {
             boolean emptyCluster = false;
-            List<CentroidCluster<T>> newClusters = new ArrayList<CentroidCluster<T>>();
+            List<CentroidCluster<T>> newClusters = new ArrayList<>();
             for (final CentroidCluster<T> cluster : clusters) {
                 final Clusterable newCenter;
                 if (cluster.getPoints().isEmpty()) {
-                    switch (emptyStrategy) {
-                        case LARGEST_VARIANCE :
-                            newCenter = getPointFromLargestVarianceCluster(clusters);
-                            break;
-                        case LARGEST_POINTS_NUMBER :
-                            newCenter = getPointFromLargestNumberCluster(clusters);
-                            break;
-                        case FARTHEST_POINT :
-                            newCenter = getFarthestPoint(clusters);
-                            break;
-                        default :
-                            throw new ConvergenceException(LocalizedFormats.EMPTY_CLUSTER_IN_K_MEANS);
-                    }
+	                newCenter = switch (emptyStrategy) {
+		                case LARGEST_VARIANCE -> getPointFromLargestVarianceCluster(clusters);
+		                case LARGEST_POINTS_NUMBER -> getPointFromLargestNumberCluster(clusters);
+		                case FARTHEST_POINT -> getFarthestPoint(clusters);
+		                default -> throw new ConvergenceException(
+				                LocalizedFormats.EMPTY_CLUSTER_IN_K_MEANS);
+	                };
                     emptyCluster = true;
                 } else {
                     newCenter = centroidOf(cluster.getPoints(), cluster.getCenter().getPoint().length);
                 }
-                newClusters.add(new CentroidCluster<T>(newCenter));
+                newClusters.add(new CentroidCluster<>(newCenter));
             }
             int changes = assignPointsToClusters(newClusters, points, assignments);
             clusters = newClusters;
@@ -288,7 +281,7 @@ public class KMeansPlusPlusClusterer<T extends Clusterable> extends Clusterer<T>
 
         // Convert to list for indexed access. Make it unmodifiable, since removal of items
         // would screw up the logic of this method.
-        final List<T> pointList = Collections.unmodifiableList(new ArrayList<T> (points));
+        final List<T> pointList = List.copyOf(points);
 
         // The number of points in the list.
         final int numPoints = pointList.size();
@@ -298,14 +291,14 @@ public class KMeansPlusPlusClusterer<T extends Clusterable> extends Clusterer<T>
         final boolean[] taken = new boolean[numPoints];
 
         // The resulting list of initial centers.
-        final List<CentroidCluster<T>> resultSet = new ArrayList<CentroidCluster<T>>();
+        final List<CentroidCluster<T>> resultSet = new ArrayList<>();
 
         // Choose one center uniformly at random from among the data points.
         final int firstPointIndex = random.nextInt(numPoints);
 
         final T firstPoint = pointList.get(firstPointIndex);
 
-        resultSet.add(new CentroidCluster<T>(firstPoint));
+        resultSet.add(new CentroidCluster<>(firstPoint));
 
         // Must mark it as taken
         taken[firstPointIndex] = true;
@@ -372,7 +365,7 @@ public class KMeansPlusPlusClusterer<T extends Clusterable> extends Clusterer<T>
 
                 final T p = pointList.get(nextPointIndex);
 
-                resultSet.add(new CentroidCluster<T> (p));
+                resultSet.add(new CentroidCluster<>(p));
 
                 // Mark it as taken.
                 taken[nextPointIndex] = true;
