@@ -3,7 +3,6 @@ package org.geogebra.io;
 import static org.junit.Assert.assertEquals;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -36,7 +35,7 @@ public class FileLoadTest {
 		Path filePath = Paths.get(filename);
 		String content = null;
 		try {
-			content = new String(Files.readAllBytes(filePath), StandardCharsets.UTF_8);
+			content = Files.readString(filePath);
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
